Modify server to use request and response types compatible with autorest
