# docs/swagger.json
@@ -17,7 +17,7 @@
                     "*/*"
                 ],
                 "produces": [
-                    "text/plain"
+                    "application/json"
                 ],
                 "summary": "Return value from database by key",
                 "operationId": "db-read",
@@ -32,19 +32,19 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Ok",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/main.ReadResponse"
                         }
                     }
                 }
             },
             "put": {
                 "consumes": [
-                    "*/*"
+                    "application/json"
                 ],
                 "produces": [
-                    "text/plain"
+                    "application/json"
                 ],
                 "summary": "Write value to database by key",
                 "operationId": "db-write",
@@ -57,17 +57,20 @@
                         "required": true
                     },
                     {
-                        "type": "string",
                         "description": "Value",
-                        "name": "value",
-                        "in": "query"
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/main.WriteRequest"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Ok",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/main.WriteResponse"
                         }
                     },
                     "307": {
@@ -81,6 +84,12 @@
                                 "description": "Redirect address of the current leader"
                             }
                         }
+                    },
+                    "400": {
+                        "description": "Error message",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             },
@@ -89,7 +98,7 @@
                     "*/*"
                 ],
                 "produces": [
-                    "text/plain"
+                    "application/json"
                 ],
                 "summary": "Delete item from database by key",
                 "operationId": "db-delete",
@@ -104,9 +113,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Ok",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/main.DeleteResponse"
                         }
                     },
                     "307": {
@@ -146,7 +155,39 @@
         }
     },
     "definitions": {
+        "main.DeleteResponse": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
         "main.HealthResponse": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.ReadResponse": {
+            "type": "object",
+            "properties": {
+                "value": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.WriteRequest": {
+            "type": "object",
+            "properties": {
+                "value": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.WriteResponse": {
             "type": "object",
             "properties": {
                 "status": {
